fix multiline truncate for visual picker item component #review-17445654 @rev franck.thomas@ https://gus.lightning.force.com/lightning/r/ADM_Work__c/a07B0000005fq2MIAQ/view BLT: CLI local=false
@precheckin 17445739@

[git-p4: depot-paths = "//app/main/core/ui-interaction-builder-components/": change = 17445857]

--- a/packages/@flow-builder/ui/src/builder_platform_interaction/visualPickerItem/visualPickerItem.css
+++ b/packages/@flow-builder/ui/src/builder_platform_interaction/visualPickerItem/visualPickerItem.css
@@ -11,9 +11,15 @@
     padding: var(--lwc-spacingXSmall);
 }
 
+.slds-visual-picker input:not(:checked) ~ label .slds-visual-picker__figure:not(:hover) {
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.05);
+  border: var(--lwc-borderWidthThin) solid var(--lwc-colorBorder);
+}
+
 /*truncate the text to 2 lines*/
 .slds-text-title {
-    max-height: calc(var(--lwc-lineHeightHeading)rem*2 - var(--lwc-spacingXSmall));
+    line-height: var(--lwc-lineHeightHeading)rem;
+    max-height: calc(var(--lwc-lineHeightHeading)rem*2);
     overflow: hidden;
     position: relative;
 }
